package colliders;

import entities.UpdatableEntity;

public interface UpdateableEntityCollider extends Collider {
    public UpdatableEntity getEntity();
}
