@startuml Solids

abstract SolidCollider
abstract BaseCollider

interface UpdateableEntityCollider

BlockCollider --|> SolidCollider
BlockCollider --> Block

BrickCollider --|> SolidCollider
BrickCollider --> Brick

PipeCollider --|> SolidCollider
PipeCollider --> Pipe

QuestionBlockCollider ..|> SolidCollider
QuestionBlockCollider --> UpdateableEntityCollider
QuestionBlockCollider --> QuestionBlock

SolidCollider --|> BaseCollider

@enduml